@@ -1,3 +1,11 @@
+2022-09-22T08:26:30Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3103931566
+* notice: last 14d: unq all: 1 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 95 139 / 101 145
+* notice: next accum: outdated-unq outdated-all / unq all: 95 139 / 102 146
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-22]
+
 2022-09-19T08:28:18Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3080957571
 * notice: last 14d: unq all: 1 6
